# libdap

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  README.md  ai-improvements.md  references.md  start-mcp-server.sh  test_address_space.py  test_debug.sh  test_debug_threaded.sh  todo-mock.md
docs/: command_reference.md  console_io_protocol.md  dap_implementation.md  dap_skeleton.md  debug_beginners_guide.md  debugging_guide.md  getting_started_with_mcp.md  guidance.md  improvement_plan.md  launch.json.example  minimal_dap_debugger.md  recent_improvements.md  register-watchpoints.md  status_today.md  stepping.md
docs/vscode-json/: command_initialise.md  setExceptionBreakpoints.md
libdap/: Makefile  README.md
libdap/include/: breakpoint.h  dap_client.h  dap_debugger.h  dap_error.h  dap_message.h  dap_protocol.h  dap_server.h  dap_server_cmds.h  dap_transport.h  dap_types.h  dap_utils.h  dap_validation.h  dap_version.h  machine_dbg.h
libdap/src/: breakpoint.c  dap_client.c  dap_error.c  dap_message.c  dap_protocol.c  dap_server.c  dap_server_cmds.c  dap_server_cmds.c.bak  dap_transport.c  dap_validation.c  error.c  version.c
libdap/tests/: Makefile  test_breakpoint.c  test_suite.c  test_utils.h
mcp-dap-server/: README.md  pyproject.toml
mcp-dap-server/mcp_dap_server/: dap_connection.py  server.py  tools.py  types.py
src/: dap_debugger_plan.md
src/dap_debugger/: dap_client_thread.c  dap_debugger.c  dap_debugger.h  dap_debugger_commands.c  dap_debugger_commands.h  dap_debugger_files.c  dap_debugger_files.h  dap_debugger_help.c  dap_debugger_help.h  dap_debugger_main.c  dap_debugger_main.h  dap_debugger_main_threaded.c  dap_debugger_threads.c  dap_debugger_threads.h  dap_debugger_types.h  dap_debugger_ui.c  dap_debugger_ui.h  dap_response_formatter.c  dap_response_formatter.h  dap_ui_thread.c  old_dap_debugger.h
src/dap_mock_server/: dap_mock_server.c  dap_mock_server.h  dap_mock_server_commands.c  dap_mock_server_commands.h  dap_mock_server_main.c
tools/dap-debugger/: CMakeLists.txt  Makefile  README.md  dap_gui_debugger.ini
tools/dap-debugger/src/: app.cpp  app.h  dap_wrapper.h  debugger_client.cpp  debugger_client.h  main.cpp
tools/dap-debugger/src/ui/: panel_breakpoints.cpp  panel_console.cpp  panel_cpu_tracing.cpp  panel_memory.cpp  panel_protocol.cpp  panel_registers.cpp  panel_server_info.cpp  panel_source.cpp  panel_stack.cpp  panel_symbols.cpp  panel_terminal.cpp  panel_threads.cpp  panel_watch.cpp  ui_main.cpp  ui_main.h
